--- a/mypy.ini
+++ b/mypy.ini
@@ -1,6 +1,14 @@
 [mypy]
 strict = True
 namespace_packages = True
-ignore_missing_imports = True
+disallow_untyped_calls = True
+ignore_missing_imports = False
+disallow_any_unimported = True
 follow_imports = silent
+follow_untyped_imports = True
 follow_imports_for_stubs = True
+mypy_path = $MYPY_CONFIG_FILE_DIR/release-controller
+
+[mypy-pydrive2.*]
+follow_untyped_imports = True
+disable_error_code = import-untyped
