--- a/release-index.yaml
+++ b/release-index.yaml
@@ -1,5 +1,13 @@
 releases:
   # NOTE: Make sure to mark security hotfixes with the `security_fix: true` flag.
+  - rc_name: rc--2025-01-23_03-04
+    versions:
+      # Qualification pipeline:
+      # https://github.com/dfinity/ic/actions/runs/12813102877
+      - name: base
+        version: 550209a750be0575cc4afff5e23c04b03048c08e
+      - name: hashes-in-blocks
+        version: 4ba583480e05a518aa2bcf36f5a0e48475e8edc2
   - rc_name: rc--2025-01-16_16-18
     versions:
       # Qualification pipeline:
