refactor(cli): replace std fs with fs_err
### Changes

- Replaced all instances of `std::fs` operations with `fs_err` to provide enhanced error messages in file system operations.

- Updated corresponding `Cargo.toml` files to include `fs-err` as a dependency.

- Adjusted `use` statements in various source files to import `fs_err` instead of `std::fs` where necessary.

### Affected Modules

- `artifact_downloader.rs`
- `auth.rs`
- `commands/*`
- `cordoned_feature_fetcher.rs`
- `discourse_client.rs`
- `qualification/*`
- `store.rs`
- `unit_tests/*`
- `ic-management-backend/*`
- `ic-observability/*`

### Rationale

- `fs_err` library provides enhanced error handling by attaching more descriptive error messages and context to filesystem operations.

--- a/rs/ic-observability/multiservice-discovery-downloader/Cargo.toml
+++ b/rs/ic-observability/multiservice-discovery-downloader/Cargo.toml
@@ -10,6 +10,7 @@ license.workspace = true
 clap = { workspace = true }
 crossbeam-channel = { workspace = true }
 crossbeam = { workspace = true }
+fs-err = { workspace = true }
 futures-util = { workspace = true }
 humantime = { workspace = true }
 multiservice-discovery-shared = { path = "../multiservice-discovery-shared" }
