--- a/rs/ic-observability/service-discovery/Cargo.toml
+++ b/rs/ic-observability/service-discovery/Cargo.toml
@@ -10,6 +10,7 @@ license.workspace = true
 anyhow = { workspace = true }
 crossbeam = { workspace = true }
 crossbeam-channel = { workspace = true }
+fs-err = { workspace = true }
 futures = { workspace = true }
 ic-interfaces-registry = { workspace = true }
 ic-metrics = { workspace = true }
