--- a/rs/slack-notifications/Cargo.toml
+++ b/rs/slack-notifications/Cargo.toml
@@ -14,6 +14,7 @@ anyhow = { workspace = true }
 candid = { workspace = true }
 dotenv = { workspace = true }
 env_logger = { workspace = true }
+fs-err = { workspace = true }
 futures = { workspace = true }
 ic-agent = { workspace = true }
 ic-management-types = { workspace = true }
