--- a/rs/slack-notifications/conf/neurons-slack-mapping.yaml
+++ b/rs/slack-notifications/conf/neurons-slack-mapping.yaml
@@ -90,7 +90,7 @@
 # - neuron_id: 75
 #   slack_id:
 - neuron_id: 76
-  slack_id: U03NX058Y9L  # Stephanus Jacobus Fischer
+  slack_id: U03HC8L2LH3  # Alexander Ufimtsev
 - neuron_id: 77
   slack_id: U04CMGD6XDH  # Pietro Di Marco
 - neuron_id: 78
