--- a/release-index.yaml
+++ b/release-index.yaml
@@ -6,6 +6,10 @@ releases:
       # https://github.com/dfinity/ic/actions/runs/13432965636
       - name: base
         version: 7147f471c7ac27f518e6c0eeb2015952b5e93e1b
+      # Qualification pipeline:
+      # https://github.com/dfinity/ic/actions/runs/13437204854
+      - name: disable-best-effort-messaging
+        version: 2f02a660f6f17b5a78c13d9b372f74c8228f79b8
   - rc_name: rc--2025-02-13_03-06
     versions:
       # Qualification pipeline:
