Add node-provider-rewards to bazel targets

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,6 +82,7 @@ erased-serde = "0.4.5"
 flate2 = "1.0.35"
 fs-err = "3.0.0"
 fs2 = "0.4.3"
+function_name = "0.3"
 futures = "0.3.31"
 futures-util = "0.3.31"
 hex = "0.4.3"
