--- a/rs/node-provider-rewards/Cargo.toml
+++ b/rs/node-provider-rewards/Cargo.toml
@@ -14,14 +14,10 @@ itertools = { workspace = true }
 num-traits = { workspace = true }
 rust_decimal = { workspace = true }
 rust_decimal_macros = { workspace = true }
-ic-management-canister-types = { workspace = true }
 tabled = { workspace = true }
-tabular = { workspace = true }
 chrono = { workspace = true }
-function_name = "0.3"
+function_name = { workspace = true }
 
-[dev-dependencies]
-maplit = "1.0.2"
 
 [lib]
 name = "node_provider_rewards"
