--- a/cordoned_features.yaml
+++ b/cordoned_features.yaml
@@ -131,6 +131,9 @@ features:
   - feature: node_operator
     value: codio-e5e6p-ol6sn-o3mgw-r7v5p-4jmch-a7exl-7pifz-cw4gn-ah47y-6ae
     explanation: "freeing up nodes from AW1 node operator for an HSM-less redeployment"
+  - feature: node_operator
+    value: redpf-rrb5x-sa2it-zhbh7-q2fsp-bqlwz-4mf4y-tgxmj-g5y7p-ezjtj-5qe
+    explanation: "freeing up nodes from OR1 node operator for an HSM-less redeployment"
   - feature: data_center
     value: an1
     explanation: "freeing up nodes from AN1 data center for an HSM-less redeployment"
