feat: success/failure telemetry in release controller reconciler
Added prometheus-client to dependencies and implemented metrics for cycle success and start timestamps.
Updated the telemetry port argument and added Prometheus server initialization.

To follow: alerts based on collected telemetry as well as runbooks.

--- a/release-controller/BUILD.bazel
+++ b/release-controller/BUILD.bazel
@@ -39,7 +39,9 @@ py_binary(
     srcs = glob(["*.py"], exclude = ["commit_annotator.py", "ci_check.py"]),
     tags = ["typecheck"],
     env = env,
-    deps = deps,
+    deps = deps + [
+        requirement("prometheus-client"),
+    ],
     data = ["//rs/cli:dre"],
 )
 
