--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ dependencies = [
     "aiohttp>=3.10.5",
     "uv>=0.5.20",
     "mypy==1.15.0",
+    "prometheus-client>=0.21.1",
 ]
 
 [tool.rye]
