--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ members = [
     "rs/slack-notifications",
     "rs/dre-canisters/node-provider-rewards-lib",
     "rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics",
-    "rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics-types",
+    "rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics-types", "rs/ic-observability/general-testnet-service-discovery",
 ]
 
 resolver = "2"
@@ -43,6 +43,7 @@ actix-rt = "2.10.0"
 ahash = "0.8.11"
 anyhow = "1.0.96"
 async-recursion = "1.1.1"
+async-trait = "0.1.87"
 axum-otel-metrics = "0.8.1"
 axum = "0.7.9"
 backoff = { version = "0.4.0", features = ["tokio"] }
