implemented basic server logic

--- a/rs/ic-observability/general-testnet-service-discovery/Cargo.toml
+++ b/rs/ic-observability/general-testnet-service-discovery/Cargo.toml
@@ -25,3 +25,4 @@ anyhow.workspace = true
 itertools.workspace = true
 tokio-util.workspace = true
 async-trait.workspace = true
+opentelemetry.workspace = true
