clippy and refactoring

--- a/rs/ic-observability/general-testnet-service-discovery/Cargo.toml
+++ b/rs/ic-observability/general-testnet-service-discovery/Cargo.toml
@@ -26,3 +26,4 @@ itertools.workspace = true
 tokio-util.workspace = true
 async-trait.workspace = true
 opentelemetry.workspace = true
+chrono.workspace = true
