refactoring downloader to support new structures

--- a/rs/ic-observability/multiservice-discovery-downloader/Cargo.toml
+++ b/rs/ic-observability/multiservice-discovery-downloader/Cargo.toml
@@ -22,3 +22,4 @@ slog-async = { workspace = true }
 slog-term = { workspace = true }
 tokio = { workspace = true }
 url = { workspace = true }
+serde_json.workspace = true
