fix: avoid including DRE binary twice.
Binary is already included as data dependency.

Additionally, updated `util.py` to include a logger for debugging binary resolution.

--- a/release-controller/BUILD.bazel
+++ b/release-controller/BUILD.bazel
@@ -93,10 +93,6 @@ long_tests = ["tests/test_commit_annotator.py"]
     ]
 ]
 
-tar(
-    name = "bins_release_controller_tar",
-    srcs = ["//rs/cli:dre"],
-)
 
 tar(
     name = "bins_commit_annotator_tar",
@@ -107,7 +103,7 @@ py_oci_image(
     name = "oci_image",
     base = "@bazel_image_7_4_1",
     binary = ":release-controller",
-    tars = [":bins_release_controller_tar"]
+    tars = []
 )
 
 py_oci_image(
