Revamp path lookup.

--- a/release-controller/BUILD.bazel
+++ b/release-controller/BUILD.bazel
@@ -38,7 +38,9 @@ py_binary(
     main = "reconciler.py",
     srcs = glob(["*.py"], exclude = ["commit_annotator.py", "ci_check.py"]),
     tags = ["typecheck"],
-    env = env,
+    env = {
+        "DRE_PATH": "$(rootpath //rs/cli:dre)",
+    },
     deps = deps + [
         requirement("prometheus-client"),
     ],
@@ -92,7 +94,6 @@ long_tests = ["tests/test_commit_annotator.py"]
         {"targets": long_tests, "tags": ["manual"]},
     ]
 ]
-
 
 tar(
     name = "bins_commit_annotator_tar",
