Re-add tar rule for release-controller binary.
Turns out when you build a container, and *push* the container, the data dependency that the py binary had
simply is not uploaded (somehow).  This accounts for the difference between the local container test
using podman and the remote container test (in ch1-rel1).

* Added a tar rule named `bins_release_controller_tar` to include the `//rs/cli:dre` source in the build process.
* Updated the `oci_image` rule to use this new tarball.
* Adjusted logging level from INFO to DEBUG in `resolve_binary` function to restore old behavior.

--- a/release-controller/BUILD.bazel
+++ b/release-controller/BUILD.bazel
@@ -96,6 +96,11 @@ long_tests = ["tests/test_commit_annotator.py"]
 ]
 
 tar(
+    name = "bins_release_controller_tar",
+    srcs = ["//rs/cli:dre"],
+)
+
+tar(
     name = "bins_commit_annotator_tar",
     srcs = [":bazelisk", ":target_determinator"],
 )
@@ -104,7 +109,7 @@ py_oci_image(
     name = "oci_image",
     base = "@bazel_image_7_4_1",
     binary = ":release-controller",
-    tars = []
+    tars = [":bins_release_controller_tar"]
 )
 
 py_oci_image(
