--- a/release-index.yaml
+++ b/release-index.yaml
@@ -1,5 +1,11 @@
 releases:
   # NOTE: Make sure to mark security hotfixes with the `security_fix: true` flag.
+  - rc_name: rc--2025-03-06_03-10
+    versions:
+      # Qualification pipeline:
+      # https://github.com/dfinity/ic/actions/runs/13690328982
+      - name: base
+        version: de6e339b323f59fc07b18c23f37c3cd2aa8ceb55
   - rc_name: rc--2025-02-27_03-09
     versions:
       # Qualification pipeline:
