--- a/rs/dre-canisters/node-provider-rewards/Cargo.toml
+++ b/rs/dre-canisters/node-provider-rewards/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "npr"
+name = "node-provider-rewards-canister"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
@@ -13,6 +13,7 @@ license.workspace = true
 crate-type = ["cdylib"]
 
 [dependencies]
+async-trait = { workspace = true }
 ic-cdk = { workspace = true }
 ic-cdk-timers = { workspace = true }
 ic-cdk-macros = { workspace = true }
@@ -29,8 +30,9 @@ ic-base-types = { workspace = true }
 ic-management-canister-types = { workspace = true }
 ic-nns-common = { workspace = true }
 ic-protobuf = { workspace = true }
-ic-registry-canister-client = { workspace = true }
-lazy_static = "1.5.0"
 ic-registry-transport = { workspace = true }
 ic-nns-constants = { workspace = true }
-itertools = "0.13.0"
+mockall = { workspace = true }
+
+[dev-dependencies]
+tokio = { workspace = true }
