Clean up the commit annotator in preparation for telemetry.
This commit renames the `commit_annotator` binary and associated Python script to `commit-annotator`,
adhering to naming conventions. It also adds a new tag (`typecheck`) for the `commit-annotator` binary
which enables mypy type checking.

Options are added to allow the commit annotater to run in a dry-run mode, locally annotating tags without
saving them to disk, pulling them from the remote, or pushing them to the remote.  These changes allow
for manual testing of the commit annotator without any credentials.

Conventional logging as well as loop time allow the annotator to run on a looser loop without spinning
CPU uselessly between runs.

The next batch of changes will add telemetry.

--- a/release-controller/BUILD.bazel
+++ b/release-controller/BUILD.bazel
@@ -48,9 +48,10 @@ py_binary(
 )
 
 py_binary(
-    name = "commit_annotator",
+    name = "commit-annotator",
     main = "commit_annotator.py",
     srcs = glob(["*.py"], exclude = ["reconciler.py", "ci_check.py"]),
+    tags = ["typecheck"],
     data = [":bazelisk", ":target_determinator"],
     env = env,
     deps = deps,
@@ -115,7 +116,7 @@ py_oci_image(
 py_oci_image(
     name = "oci_image_commit_annotator",
     base = "@bazel_image_7_4_1",
-    binary = ":commit_annotator",
+    binary = ":commit-annotator",
     tars = [":bins_commit_annotator_tar"]
 )
 
