--- a/rs/dre-canisters/node-provider-rewards/BUILD.bazel
+++ b/rs/dre-canisters/node-provider-rewards/BUILD.bazel
@@ -1,7 +1,6 @@
-load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
+load("@rules_rust//cargo:defs.bzl", "cargo_build_script", "all_crate_deps")
 load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
 load("//bazel:canisters.bzl", "rust_canister")
-
 package(default_visibility = ["//visibility:public"])
 
 MACRO_DEPENDENCIES = [
