--- a/rs/dre-canisters/node-provider-rewards/BUILD.bazel
+++ b/rs/dre-canisters/node-provider-rewards/BUILD.bazel
@@ -1,5 +1,7 @@
-load("@rules_rust//cargo:defs.bzl", "cargo_build_script", "all_crate_deps")
+load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
+load("@crate_index_dre//:defs.bzl", "aliases", "all_crate_deps")
 load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
+load("//bazel:canisters.bzl", "rust_canister")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -41,6 +43,22 @@ rust_library(
     deps = all_crate_deps(
            normal = True,
        ) + [":build_script"],
+)
+
+rust_canister(
+    name = "node-provider-rewards-canister",
+    srcs = glob(["src/**/*.rs"]),
+    aliases = ALIASES,
+    proc_macro_deps = all_crate_deps(
+           proc_macro = True,
+       ),
+    service_file = ":node_provider_rewards.did",
+    deps = all_crate_deps(
+           normal = True,
+       ) + [
+        ":build_script",
+        ":npr",
+    ],
 )
 
 rust_test(
