Added crate root for npr

--- a/rs/dre-canisters/node-provider-rewards/BUILD.bazel
+++ b/rs/dre-canisters/node-provider-rewards/BUILD.bazel
@@ -27,6 +27,7 @@ cargo_build_script(
 rust_library(
     name = "npr",
     srcs = glob(["src/**/*.rs"]),
+    crate_root= "canister/canister.rs",
     aliases = ALIASES,
     crate_name = "node_provider_rewards_canister",
     proc_macro_deps = all_crate_deps(
