--- a/rs/dre-canisters/node-provider-rewards/Cargo.toml
+++ b/rs/dre-canisters/node-provider-rewards/Cargo.toml
@@ -9,9 +9,8 @@ license.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[[bin]]
-name = "node-provider-rewards-canister"
-path = "canister/canister.rs"
+[lib]
+crate-type = ["cdylib"]
 
 [dependencies]
 async-trait = { workspace = true }
