--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,3 +75,10 @@ extend-exclude = '''
   ^/release-controller/release_index.py    # This file is generated from /bin/release-controller-update-data-model.sh
 )
 '''
+
+[tool.pytest.ini_options]
+# the following option appears in a pytest version that is later than the one currently used in Bazel.
+# asyncio_default_fixture_loop_scope = "function"
+filterwarnings = [
+    "ignore::_pytest.warning_types.PytestAssertRewriteWarning"
+]
