chore(release): update release index with new release candidate

--- a/release-index.yaml
+++ b/release-index.yaml
@@ -1,5 +1,11 @@
 releases:
   # NOTE: Make sure to mark security hotfixes with the `security_fix: true` flag.
+  - rc_name: rc--2025-03-13_03-12
+    versions:
+      # Qualification pipeline:
+      # https://github.com/dfinity/ic/actions/runs/13826248073
+      - name: base
+        version: 55662098233e82b6044cd1750fbc3b4e8664c2c4
   - rc_name: rc--2025-03-06_03-10
     versions:
       # Qualification pipeline:
