--- a/release-controller/BUILD.bazel
+++ b/release-controller/BUILD.bazel
@@ -75,6 +75,13 @@ native_binary(
     out = "target-determinator",
 )
 
+genrule(
+    name = "ic_repo_clone_for_long_tests",
+    outs = ["ic.git.tar"],
+    cmd = "git clone https://github.com/dfinity/ic.git ic.git && cd `dirname $@`/ic.git && tar cf ../ic.git.tar .",
+    tags = ["no-sandbox"] + ["manual"],
+)
+
 # Add file here if you do not want to run the test automatically.
 long_tests = ["tests/test_commit_annotator.py"]
 
@@ -83,9 +90,9 @@ long_tests = ["tests/test_commit_annotator.py"]
         py_test(
             name = target[6:-3],
             srcs = ["tests/runner.py"] + [target] + glob(["tests/mock_*.py"]),
-            data = glob(["tests/test_data/*"]) + ["//:pyproject.toml"],
+            data = glob(["tests/test_data/*"]) + ["//:pyproject.toml"] + group["data"],
             main = "tests/runner.py",
-            env = env,
+            env = env | group["env"],
             tags = ["no-sandbox"] + group["tags"] + ["typecheck"],
             deps = deps + dev_deps + ["release-controller"] + ["commit-annotator"],
             env_inherit = ["HOME"],
@@ -94,8 +101,22 @@ long_tests = ["tests/test_commit_annotator.py"]
         for target in group["targets"]
     ]
     for group in [
-        {"targets": glob(["tests/test_*.py"], exclude=long_tests), "tags": [], "test_size": "small"},
-        {"targets": long_tests, "tags": ["manual"], "test_size": "large"},
+        {
+            "targets": glob(["tests/test_*.py"], exclude=long_tests),
+            "tags": [],
+            "test_size": "small",
+            "data": [],
+            "env": {},
+        },
+        {
+            "targets": long_tests,
+            "tags": ["manual"],
+            "test_size": "large",
+            "data": ["ic_repo_clone_for_long_tests"],
+            "env": {
+                "IC_REPO_SEED_TAR": "$(location ic_repo_clone_for_long_tests)",
+            },
+        },
     ]
 ]
 
