--- a/rs/node-provider-rewards/Cargo.toml
+++ b/rs/node-provider-rewards/Cargo.toml
@@ -16,10 +16,8 @@ rust_decimal = { workspace = true }
 rust_decimal_macros = { workspace = true }
 tabled = { workspace = true }
 chrono = { workspace = true }
+function_name = { workspace = true }
 ic-protobuf = { workspace = true }
-
-[dev-dependencies]
-once_cell = "1.20.3"
 
 [lib]
 name = "node_provider_rewards"
