Add rewards calculator

--- a/rs/node-provider-rewards/Cargo.toml
+++ b/rs/node-provider-rewards/Cargo.toml
@@ -16,8 +16,8 @@ rust_decimal = { workspace = true }
 rust_decimal_macros = { workspace = true }
 tabled = { workspace = true }
 chrono = { workspace = true }
-function_name = { workspace = true }
 ic-protobuf = { workspace = true }
+indexmap = { workspace = true }
 
 [lib]
 name = "node_provider_rewards"
