--- a/rs/dre-canisters/node-provider-rewards/Cargo.toml
+++ b/rs/dre-canisters/node-provider-rewards/Cargo.toml
@@ -12,6 +12,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 async-trait = { workspace = true }
+ic-canisters-http-types = { workspace = true }
 ic-cdk = { workspace = true }
 ic-cdk-timers = { workspace = true }
 ic-cdk-macros = { workspace = true }
@@ -26,6 +27,8 @@ anyhow = { workspace = true }
 indexmap = { workspace = true }
 ic-base-types = { workspace = true }
 ic-management-canister-types = { workspace = true }
+ic-metrics-encoder = { version = "1.1.1" }
+ic-nervous-system-common = { workspace = true }
 ic-nns-common = { workspace = true }
 ic-protobuf = { workspace = true }
 ic-registry-transport = { workspace = true }
