Update k8s deployments action to use push-token and create PR
Updated the GitHub workflow for updating k8s deployments.
- Renamed input from 'github_api_token' to 'push-token'.
- Added step to check out the k8s repository using the 'actions/checkout@v4' action.
- Updated the commit message and PR title to include component information.
- Implemented logic to update or create a pull request based on existing PRs.

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -148,7 +148,8 @@ jobs:
         if: ${{ github.ref == 'refs/heads/main' }}
         uses: ./.github/workflows/update-k8s-deployments
         with:
-          github_api_token: ${{ secrets.K8S_API_TOKEN }}
+          push-token: ${{ secrets.K8S_API_TOKEN }}
+          component: container-images
 
       ########################################
       # Clean up runner
