--- a/rs/dre-canisters/node-provider-rewards/Cargo.toml
+++ b/rs/dre-canisters/node-provider-rewards/Cargo.toml
@@ -21,6 +21,7 @@ candid = { workspace = true }
 serde = { workspace = true }
 ic-interfaces-registry = { workspace = true }
 ic-registry-keys = { workspace = true }
+itertools = { workspace = true }
 futures = { workspace = true }
 ic-types = { workspace = true }
 anyhow = { workspace = true }
@@ -34,7 +35,9 @@ ic-protobuf = { workspace = true }
 ic-registry-transport = { workspace = true }
 ic-nns-constants = { workspace = true }
 mockall = { workspace = true }
+node-provider-rewards = { workspace = true }
 thiserror = { workspace = true }
+lazy_static = { workspace = true }
 
 [dev-dependencies]
 tokio = { workspace = true }
