--- a/.github/workflows/update-k8s-deployments/action.yaml
+++ b/.github/workflows/update-k8s-deployments/action.yaml
@@ -2,6 +2,9 @@ name: Update k8s deployments
 description: Reusable action for updating k8s deployments
 
 inputs:
+  files-to-update:
+    description: "A space-separated list of files to update"
+    required: true
   push-token:
     description: "The Github token needed to create PRs"
     required: true
@@ -24,6 +27,7 @@ runs:
       id: "create-rollout-commit"
       env:
         PUSH_TOKEN: ${{ inputs.push-token }}
+        FILES_TO_UPDATE: ${{ inputs.files-to-update }}
         COMPONENT: ${{ inputs.component }}
       shell: bash
       run: |
@@ -31,8 +35,8 @@ runs:
 
         # List of files can be update in
         # .github/workflows/main.yaml
-        echo "Should change following files:"
-        echo $files
+        echo "Should change following files:" >&2
+        echo $FILES_TO_UPDATE >&2
         cd k8s
 
         git config user.email "idx@dfinity.org"
@@ -45,8 +49,8 @@ runs:
         # this regex matches the first group (ie the image name) and uses \1
         # called a back-reference to insert the first group matched, the second
         # part is to match the 40 characters hash that we replace with the $GITHUB_SHA
-        prev_commit=$(sed -rn 's~(.*)'"(.*):"'([a-f0-9]{40}).*~\3~p' $files | head -n 1)
-        sed -i "s~\(\([[:alpha:]]\|-\)\+\):[[:alnum:]]\{40\}~\1:${GITHUB_SHA}~g" $files
+        prev_commit=$(sed -rn 's~(.*)'"(.*):"'([a-f0-9]{40}).*~\3~p' $FILES_TO_UPDATE | head -n 1)
+        sed -i "s~\(\([[:alpha:]]\|-\)\+\):[[:alnum:]]\{40\}~\1:${GITHUB_SHA}~g" $FILES_TO_UPDATE
 
         # commit changes if there are any
         git add .
