--- a/.github/workflows/check-modified-files-as-step/action.yaml
+++ b/.github/workflows/check-modified-files-as-step/action.yaml
@@ -28,12 +28,10 @@ runs:
         do
         echo $file
         if [[ $file != $PATH_TO_CHECK ]]; then
-          echo "changed=false" >> $GITHUB_ENV
-          echo "changed=false" >> $GITHUB_OUTPUT
+          echo "changed=false" > $GITHUB_OUTPUT
         else
           echo "File $file matches $PATH_TO_CHECK"
-          echo "changed=true" >> $GITHUB_ENV
-          echo "changed=true" >> $GITHUB_OUTPUT
+          echo "changed=true" > $GITHUB_OUTPUT
           break
         fi
         done < files.txt
