feat: add reward calculation and retrieval for node providers

--- a/rs/dre-canisters/node-provider-rewards/Cargo.toml
+++ b/rs/dre-canisters/node-provider-rewards/Cargo.toml
@@ -37,7 +37,8 @@ ic-nns-constants = { workspace = true }
 mockall = { workspace = true }
 node-provider-rewards = { workspace = true }
 thiserror = { workspace = true }
-lazy_static = { workspace = true }
+prost = { workspace = true }
+rust_decimal = { workspace = true }
 
 [dev-dependencies]
 tokio = { workspace = true }
