--- a/rs/ic-management-types/Cargo.toml
+++ b/rs/ic-management-types/Cargo.toml
@@ -14,6 +14,7 @@ chrono = { workspace = true }
 futures = { workspace = true }
 ic-base-types = { workspace = true }
 ic-nns-governance = { workspace = true }
+ic-nns-governance-api = { workspace = true }
 ic-registry-subnet-type = { workspace = true }
 ic-types = { workspace = true }
 indexmap = { workspace = true }
